Bug 374511 - Not possible to reset association widget text positions
Summary: Not possible to reset association widget text positions
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.21.0 (KDE Applications 16.12.0)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-03 22:25 UTC by Ralf Habacker
Modified: 2017-01-03 23:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.21.1 (KDE Applications 16.12.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2017-01-03 22:25:17 UTC
On associations there is a context menu entry named "Reset text position" to reset positions of related association texts. This function seems to be broken.

How to reproduce:
1. Start umbrello
2. add two classes
3. add an association between both classes
4. Open association property dialog and enter text for both multiplicity e.g '1' and  '0..1'.
5. save and close property dialog
6. move multiplicity labels to other location
7. right click in the association and press "Reset text positions"

-> nothing happens

What is expected:
The labels should be moved to the initial position

Additional informations:
After moving one multiplicity label the labels are not moved anymore when moving a related class on the diagram. It looks that tracking labels is completly broken after one label move.
Comment 1 Ralf Habacker 2017-01-03 23:29:41 UTC
Git commit 7396c5f2decfee0cc4098d97dd834f0a3f7a8cd0 by Ralf Habacker.
Committed on 03/01/2017 at 23:29.
Pushed by habacker into branch 'Applications/16.12'.

Fix 'Not possible to reset association widget text positions'.

UMLWidget::m_startMove was set on mouse move event but not
cleared on mouse release event.
FIXED-IN:2.21.1 (KDE Applications 16.12.1)

M  +1    -0    umbrello/umlwidgets/umlwidget.cpp

https://commits.kde.org/umbrello/7396c5f2decfee0cc4098d97dd834f0a3f7a8cd0
Comment 2 Ralf Habacker 2017-01-03 23:42:40 UTC
(In reply to Ralf Habacker from comment #0)
Step 7 was incorrect:
> 7. right click in the association and press "Reset text positions"
It has to be 
7. move one of the related widgets