Fix 'Not possible to reset association widget text positions'.

UMLWidget::m_startMove was set on mouse move event but not
cleared on mouse release event.

BUG:374511
FIXED-IN:2.21.1 (KDE Applications 16.12.1)