umbrello/umlwidgets/umlwidget.cpp
@@ -584,6 +584,7 @@ void UMLWidget::mouseReleaseEvent(QGraphicsSceneMouseEvent *event)
     } else {
         m_inMoveArea = false;
     }
+    m_startMove = false;
 }
 
 /**
